phase2_Dev/src/objects/Contact_Role__c.object
<CustomObject>
    <description>This is a junction object between a provider and contact. A single contact may play multiple roles for a provider like Owner, Administrator etc.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact to which contact role is associated with.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Formula__c</fullName>
        <formula>AND (
OR ( ISBLANK(Start_Role_Licensing_Transaction__c),  ISPICKVAL(Start_Role_Licensing_Transaction__r.Status__c, &quot;Closed (License Issued / Updated)&quot;), ISPICKVAL(Start_Role_Licensing_Transaction__r.Status__c, &quot;Closed (Processed)&quot;))
,
OR(
AND(ISBLANK( Start_Date__c ), ISBLANK( End_Date__c )),
AND(ISBLANK( End_Date__c), Start_Date__c &lt;= TODAY()),
AND(Start_Date__c &lt;= TODAY(), End_Date__c &gt;= TODAY())
))</formula>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date when a certain contact role is no longer effective.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Role_Licensing_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Licensing transaction ending a contact role.</description>
        <label>End Role Licensing Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Ownership/Administrator End</relationshipLabel>
        <relationshipName>Contact_Roles_End</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if contact related to this contact role should have portal access.</description>
        <label>Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <description>Account to which the contact is associated with.</description>
        <label>Provider / Umbrella</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role that the contact plays for the provider associated.</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Director / Administrative Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Designee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant / Toddler Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Administrative_Hours__c</fullName>
        <description>Schedule Administrative Hours (approximate number hours per week)</description>
        <label>Schedule Administrative Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Teaching_Hours__c</fullName>
        <description>Schedule Teaching Hours  (approximate number hours per week)</description>
        <label>Schedule Teaching Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date when a certain contact role became effective.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Role_Licensing_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Licensing transaction during which the role started.</description>
        <label>Start Role Licensing Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Ownership/Administrator Start</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Asoc_Prov_cant_be_FCC_FCC_Ast_or_Unlic</fullName>
        <active>true</active>
        <description>Associated Provider cannot be Family Child Care, FCC Assistant, or Unlicensed Provider</description>
        <errorConditionFormula>OR( 
Provider__r.RecordType.Name = &quot;Family Child Care&quot;,
Provider__r.RecordType.Name = &quot;FCC Assistant&quot;,
Provider__r.RecordType.Name = &quot;Unlicensed Provider&quot;
)</errorConditionFormula>
        <errorDisplayField>Provider__c</errorDisplayField>
        <errorMessage>Associated Provider cannot be Family Child Care, FCC Assistant, or Unlicensed Provider</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Greater_Than_Start_Date</fullName>
        <active>true</active>
        <description>End Date must be greater than the Start Date</description>
        <errorConditionFormula>End_Date__c  &lt;   Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be greater than the Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_must_be_greater_than_Today</fullName>
        <active>false</active>
        <description>End Date must be greater than Today</description>
        <errorConditionFormula>End_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be greater than or equal to Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exec_Director_for_Umbrella_only</fullName>
        <active>true</active>
        <description>Executive Director role can only be used if Provider is an Umbrella</description>
        <errorConditionFormula>Provider__r.RecordType.Name != &quot;Umbrella&quot;

&amp;&amp;

ISPICKVAL( Role__c, &quot;Executive Director&quot;)</errorConditionFormula>
        <errorDisplayField>Role__c</errorDisplayField>
        <errorMessage>Executive Director role can only be used if Provider is an Umbrella</errorMessage>
    </validationRules>
</CustomObject>